--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -17,7 +17,7 @@
 	background-color: rgba(255, 255, 255, 1);
 }
 .modal {
-	max-width: 450px;
+	max-width: 100%;
 	min-height: 609px;
 	padding: 40px;
 	background-color: #ffffff;
