--- a/css/main.css
+++ b/css/main.css
@@ -1002,8 +1002,8 @@ img {
 }
 
 .modal {
-  width: 528px;
-  min-height: 581px;
+  width: 100vw;
+  min-height: 609px;
   padding: 40px;
   background-color: #ffffff;
   border-radius: 4px;
@@ -1015,14 +1015,36 @@ img {
   transition-property: background-color;
 }
 
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    min-height: 581px;
+  }
+}
+
 .modal__title {
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   letter-spacing: 0.03em;
   font-weight: 700;
   text-align: center;
   color: var(--second-title-color);
   margin-bottom: 12px;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal__title {
+    font-size: 20px;
+    line-height: 1.15;
+    letter-spacing: 0.03em;
+    font-weight: 700;
+  }
 }
 
 .modal__label {
@@ -1126,11 +1148,20 @@ img {
 }
 
 .modal-comments__text::placeholder {
-  font-size: 12px;
-  line-height: 1.16;
+  font-size: 14px;
+  line-height: 1.14;
   letter-spacing: 0.01em;
   font-weight: 400;
   color: rgba(117, 117, 117, 0.5);
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-comments__text::placeholder {
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    font-weight: 400;
+  }
 }
 
 .modal-comments__text:focus {
@@ -1138,8 +1169,8 @@ img {
 }
 
 .subscribe-checkbox__text {
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   font-weight: 400;
   color: #757575;
@@ -1147,6 +1178,15 @@ img {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe-checkbox__text {
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    font-weight: 400;
+  }
 }
 
 .subscribe-checkbox__checkbox {
@@ -1175,16 +1215,7 @@ img {
 .subscribe-checkbox__element {
   color: #2196f3;
   position: relative;
-}
-
-.subscribe-checkbox__element::after {
-  content: "";
-  width: 100%;
-  height: 1px;
-  background-color: #2196f3;
-  position: absolute;
-  bottom: 5px;
-  left: 0;
+  text-decoration: underline;
 }
 
 .modal-btn {
