--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -6,6 +6,7 @@
 	top: 0;
 	left: 0;
 	transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	
 }
 .is-hidden {
 	visibility: hidden;
@@ -17,7 +18,7 @@
 	background-color: rgba(255, 255, 255, 1);
 }
 .modal {
-	max-width: 100%;
+	width: 100vw;
 	min-height: 609px;
 	padding: 40px;
 	background-color: #ffffff;
@@ -29,18 +30,26 @@
 	left: 50%;
 	transform: scale(1) rotateX(0) translate(-50%, -50%);
 	transition-property: background-color;
+	@media screen and (min-width: 480px) {
+		width: 450px;
+	}
+
 	@media screen and (min-width: 1200px) {
 		width: 528px;
 		min-height: 581px;
 	}
 }
 .modal__title {
-	@include text(20px, 1.15, 0.03em, 700);
+	@include text(20px, 1.5, 0.03em, 700);
 	text-align: center;
 	color: var(--second-title-color);
 
 	margin-bottom: 12px;
+	@media screen and (min-width: 1200px) {
+		@include text(20px, 1.15, 0.03em, 700);
+	}
 }
+
 .modal__label {
 	@include text(12px, 1.17, 0.01em, 400);
 	color: #757575;
@@ -134,9 +143,12 @@
 	margin-bottom: 20px;
 
 	&::placeholder {
-		@include text(12px, 1.16, 0.01em, 400);
+		@include text(14px, 1.14, 0.01em, 400);
 
 		color: rgba(117, 117, 117, 0.5);
+		@media screen and (min-width: 1200px) {
+			@include text(12px, 1.16, 0.01em, 400);
+		}
 	}
 	&:focus {
 		border: 1px solid #2196f3;
@@ -144,7 +156,7 @@
 }
 
 .subscribe-checkbox__text {
-	@include text(14px, 1.71, 0.03em, 400);
+	@include text(12px, 1.17, 0.03em, 400);
 	color: #757575;
 
 	margin-bottom: 30px;
@@ -152,7 +164,11 @@
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
+	@media screen and (min-width: 1200px) {
+		@include text(14px, 1.71, 0.03em, 400);
+	}
 }
+
 .subscribe-checkbox__checkbox {
 	content: "";
 	width: 16px;
@@ -176,16 +192,7 @@
 .subscribe-checkbox__element {
 	color: #2196f3;
 	position: relative;
-
-	&::after {
-		content: "";
-		width: 100%;
-		height: 1px;
-		background-color: #2196f3;
-		position: absolute;
-		bottom: 5px;
-		left: 0;
-	}
+	text-decoration: underline;
 }
 
 .modal-btn {
