--- a/css/main.css
+++ b/css/main.css
@@ -235,6 +235,7 @@ img {
 .header-contacts__link {
   color: #757575;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  align-content: center;
 }
 
 .header-contacts__link:hover, .header-contacts__link:focus {
@@ -246,7 +247,6 @@ img {
     padding-top: 32px;
     padding-bottom: 32px;
     display: flex;
-    align-items: center;
   }
 }
 
