--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -8,7 +8,6 @@
 	align-items: center;
 }
 
-
 .header__site-nav {
 	@media screen and (min-width: 768px) {
 		display: flex;
@@ -60,9 +59,9 @@
 
 .header-contacts {
 	display: none;
+
 	@media screen and (min-width: 768px) {
 		display: block;
-		
 	}
 	@media screen and (min-width: 1200px) {
 		display: flex;
@@ -71,6 +70,7 @@
 }
 .header-contacts__item {
 	@include text(14px, 1.14, 0.02em, 500);
+
 	@media screen and (min-width: 768px) {
 		&:not(:last-child) {
 			margin-bottom: 10px;
@@ -84,22 +84,20 @@
 	}
 }
 .header-contacts__link {
-
 	color: $text-color;
 	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+		align-content: center;
 
 	&:hover,
 	&:focus {
 		color: $accent-color;
 	}
 	@media screen and (min-width: 1200px) {
-	padding-top: 32px;
-	padding-bottom: 32px;
-	
-	display: flex;
-	align-items: center;
-	
-}
+		padding-top: 32px;
+		padding-bottom: 32px;
+
+		display: flex;
+	}
 }
 .header-contacts__icons {
 	fill: currentColor;
