--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -6,7 +6,6 @@
 	top: 0;
 	left: 0;
 	transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-	
 }
 .is-hidden {
 	visibility: hidden;
@@ -18,11 +17,14 @@
 	background-color: rgba(255, 255, 255, 1);
 }
 .modal {
-	width: 100vw;
-	min-height: 609px;
+	
+	max-height: 609px;
+	height: 90vh;
+	overflow: auto;
 	padding: 40px;
 	background-color: #ffffff;
 	border-radius: 4px;
+
 	box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
 		0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 	position: absolute;
